# ksm

./: README.md  Version.md  index.html  install-deps.sh  package-lock.json  package.json  test.deploy.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: aaa.rs  info.rs  log_stream.rs  request_proxy.rs  test_kubectl.rs  test_watch.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/api/: cluster.rs  custom_api.rs  k8s_proxy.rs  mod.rs  websocket.rs
src-tauri/src/boot/: config.rs  mod.rs  server.rs  setup.rs  traffic_light_plugin.rs  websocket.rs
src-tauri/src/handler/: cluster.rs
src-tauri/src/resource/: cluster.rs
src-tauri/src/service/: mod.rs  pod.rs
src-tauri/src/utils/: cluster.rs  init_client.rs  mod.rs
src-tauri/tray/contextmenu/: index.tsx
src/Layout/: index.scss  index.tsx
src/api/: apply.ts  cluster.ts  deployment.ts  event.ts  namespace.ts  node.ts  pod.ts
src/assets/icon/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/components/CheckUpdate/: index.tsx
src/components/Container/: index.tsx
src/components/CustomBox/: index.scss  index.tsx
src/components/CustomContent/: index.scss  index.tsx
src/components/CustomDragDiv/: index.tsx
src/components/CustomEdit/: index.tsx  monaco-config.ts
src/components/CustomLog/: index.tsx
src/components/DescribeCard/: index.tsx
src/components/EllipsisMiddle/: index.tsx
src/components/Footer/: index.scss  index.tsx
src/components/IconButton/: index.tsx
src/components/MyIcon/: index.tsx
src/components/MyTable/: index.scss  index.tsx
src/components/PodDetail/: index.tsx
src/components/Settings/: index.scss  index.tsx
src/components/Terminal/: index.tsx
src/components/TopBar/: index.scss  index.tsx
src/components/UIcon/: index.tsx
src/components/ViewYaml/: index.tsx
src/components/WindowOperation/: index.tsx
src/locales/: index.tsx
src/locales/en-US/: cluster.ts  common.ts  deployment.ts  index.ts  menus.ts  namespace.ts  setting.ts  table.ts
src/locales/zh-CN/: cluster.ts  common.ts  deployment.ts  index.ts  menus.ts  namespace.ts  setting.ts  table.ts
src/pages/About/: index.scss  index.tsx  window.ts  window.tsx
src/pages/Config/ConfigMap/: index.tsx
src/pages/Config/Secret/: index.tsx
src/pages/CustomResource/: index.tsx
src/pages/Dashboard/: index.scss  index.tsx
src/pages/Home/: index.scss  index.tsx
src/pages/Layout/: index.scss  index.tsx
src/pages/Message/: index.tsx
src/pages/Namespace/: index.tsx
src/pages/NetWork/Ingress/: index.tsx
src/pages/NetWork/Service/: index.tsx
src/pages/Node/: Detail.tsx  index.tsx
src/pages/Setting/: index.tsx
src/pages/Setting/About/: index.tsx
src/pages/Setting/ModelConfig/: index.tsx
src/pages/Storage/PersistentVolume/: index.tsx
src/pages/Storage/PersistentVolumeClaims/: index.tsx
src/pages/Storage/StorageClass/: index.tsx
src/pages/Task/CronJob/: index.tsx
src/pages/Task/Job/: index.tsx
src/pages/Workload/DaemonSet/: index.tsx
src/pages/Workload/Deployment/: DeploymentDetailDrawer.tsx  Detail.tsx  index.scss  index.tsx
src/pages/Workload/Pod/: Detail.tsx  index.scss  index.tsx
src/pages/Workload/StatefulSet/: index.tsx
src/pages/tray/: contextmenu.ts  index.tsx
src/pages/windows/: actions.ts
src/router/: index.tsx
src/store/: hook.ts  index.ts
src/store/modules/: kubernetes.ts  theme.ts
src/types/: cluster.d.ts  resources.ts  them.d.ts
src/utils/: lcoalStorage.ts  messageBox.ts  performance.ts  version.ts
src/utils/k8s/: date.ts  tools.tsx
src/utils/windows/: actions.ts  index.ts
