[package]
name = "ksm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ksm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

serde_yaml = "0"
dirs = "5"
anyhow = "1"
kube = { version = "0.98.0", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
thiserror = "2"
once_cell = "1"
tower = { version = "0.5.1", features = ["util"] }
hyper-util = "0.1.10"
hyper = "1.5.1"
tokio = { version = "*", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
either = "1.13.0"
edit = "0.1.5"
tauri-plugin-websocket = "2.0.1"
http = "1.2.0"
tokio-tungstenite = "0.26.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
