[package]
name = "ksm"
version = "0.0.2"
description = "A Tauri App"
authors = ["lbemi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ksm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"

serde_yaml = "0"
dirs = "6"
anyhow = "1"
kube = { version = "2.0.1", features = [
    "runtime",
    "derive",
    "rustls-tls",
    "http-proxy",
    "ws",
] }
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
thiserror = "2"
once_cell = "1"
tower = { version = "0.5.2", features = ["util"] }
hyper-util = "0.1"
hyper = "1"
tokio = { version = "*", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
either = "1"
edit = "0.1.5"
tauri-plugin-websocket = "2.4.0"
http = "1"
tauri-plugin = "2.4.0"

tokio-tungstenite = "0"
tokio-util = "0"
futures-channel = "0.3.31"
futures-util = "0.3.31"
uuid = { version = "1", features = ["v4", "serde"] }
arc-swap = "1"
chrono = "0.4"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
rand = "0.9.2"
objc2-app-kit = "0.3.2"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2.3.0"
